added public folder

--- a/.gitignore
+++ b/.gitignore
@@ -401,3 +401,4 @@ __marimo__/
 
 # Secrets
 secrets/frontend/node_modules/.cache/default-development/0.pack
+frontend/node_modules/.cache/default-development/0.pack
