--- a/.gitignore
+++ b/.gitignore
@@ -402,3 +402,5 @@ __marimo__/
 # Secrets
 secrets/frontend/node_modules/.cache/default-development/0.pack
 frontend/node_modules/.cache/default-development/0.pack
+
+secrets/
