--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,12 +32,14 @@
     "@radix-ui/react-toggle-group": "^1.1.7",
     "@radix-ui/react-tooltip": "^1.2.4",
     "@supabase/supabase-js": "^2.84.0",
-    "axios": "^1.8.4",
+    "@tanstack/react-query": "^5.90.11",
+    "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "cra-template": "1.2.0",
     "date-fns": "^4.1.0",
+    "dexie": "^4.2.1",
     "dotenv": "^17.2.3",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^12.6.0",
@@ -55,8 +57,11 @@
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^13.0.0",
     "vaul": "^1.1.2",
-    "zod": "^3.24.4"
+    "vite-plugin-pwa": "^1.2.0",
+    "zod": "^3.24.4",
+    "zustand": "^5.0.9"
   },
   "scripts": {
     "start": "craco start",
