--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -15,7 +15,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     && rm -rf /var/lib/apt/lists/*
 
 # Copiar solo requirements para aprovechar caché de Docker
-COPY requirements.txt .
+COPY backend/requirements.txt .
 
 # Instalar dependencias en un directorio temporal
 RUN pip install --upgrade pip setuptools wheel && \
