--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,21 +4,33 @@ bcrypt==4.1.3
 black==25.11.0
 boto3==1.40.76
 botocore==1.40.76
+CacheControl==0.14.4
 cachetools==6.2.2
 certifi==2025.11.12
 cffi==2.0.0
 charset-normalizer==3.4.4
 click==8.3.1
+colorama==0.4.6
 cryptography==46.0.3
 deprecation==2.1.0
 dnspython==2.8.0
 ecdsa==0.19.1
 email-validator==2.3.0
 fastapi==0.110.1
+firebase_admin==7.1.0
 flake8==7.3.0
+google-api-core==2.28.1
 google-auth==2.41.1
 google-auth-httplib2==0.2.1
 google-auth-oauthlib==1.2.3
+google-cloud-core==2.5.0
+google-cloud-firestore==2.21.0
+google-cloud-storage==3.7.0
+google-crc32c==1.7.1
+google-resumable-media==2.8.0
+googleapis-common-protos==1.72.0
+grpcio==1.76.0
+grpcio-status==1.76.0
 h11==0.16.0
 h2==4.3.0
 hpack==4.1.0
@@ -34,6 +46,7 @@ markdown-it-py==4.0.0
 mccabe==0.7.0
 mdurl==0.1.2
 motor==3.3.1
+msgpack==1.1.2
 multidict==6.7.0
 mypy==1.18.2
 mypy_extensions==1.1.0
@@ -47,6 +60,8 @@ platformdirs==4.5.0
 pluggy==1.6.0
 postgrest==2.24.0
 propcache==0.4.1
+proto-plus==1.26.1
+protobuf==6.33.2
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pycodestyle==2.14.0
